[gd_scene load_steps=5 format=2]

[ext_resource path="res://Minigame_WerkzeugZuordnen/Assets/placeholder_schippe.png" type="Texture" id=1]
[ext_resource path="res://Minigame_WerkzeugZuordnen/Werkzeug.gd" type="Script" id=2]
[ext_resource path="res://Minigame_WerkzeugZuordnen/Assets/possible_theme.tres" type="Theme" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 91.5, 86.5 )

[node name="Werkzeug" type="Area2D"]
position = Vector2( 533, 260 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -7, 10 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.5, 9.5 )
shape = SubResource( 1 )

[node name="InfoLabel" type="Label" parent="."]
margin_left = 56.0
margin_top = -47.0
margin_right = 273.0
theme = ExtResource( 3 )

[connection signal="mouse_entered" from="." to="." method="_on_Werkzeug_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Werkzeug_mouse_exited"]
